--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,6 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
+@import './partials/reset';
 @import './example';
-
-/**/
+@import './partials/contacts'; /**/
