--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,9 @@
  */
 
 // Style dla pliku z przykładem HTML fragmentu
+
 @import './example';
+@import './partials/header';
+@import './partials/hero';
 
 /**/
