--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,10 @@
+
+// globals
+
+@import './setupglobal';
+@import './mixins';
+
+
 /*
  * Główny plik dla stylów.
  * Wszystkie partials podłączamy tutaj.
