--- a/src/sass/_setupglobal.scss
+++ b/src/sass/_setupglobal.scss
@@ -1,1 +1,14 @@
-$font-size: 14px;
+.container {
+	min-width: 320px;
+    max-width: 480px;
+	width: 100%;
+	margin: 0 auto;
+
+	@include tablet {
+		min-width: 768px;
+	}
+
+	@include desktop {
+		min-width: 1200px;
+	}
+}
