--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,9 +8,9 @@
           </article>
           <figure>
             <img
-              src="images/mobile/cow.jpg"
+              src="../images/mobile/cow.jpg"
               alt="cow on grass"
-              srcset="images/mobile/x2/cow@2x.jpg"
+              srcset="../images/mobile/x2/cow@2x.jpg"
             />
             <figcaption>
               <p>
@@ -57,14 +57,14 @@
           </div>
           <!--Modal^^-->
           <figure>
-            <svg><use href="images/how_made_icon.svg#icon-cow-head"></use></svg>
+            <svg><use href="../images/how_made_icon.svg"></use></svg>
             <figcaption>
               <h3>721</h3>
               <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </figcaption>
           </figure>
           <figure>
-            <svg><use href="images/how_made_icon.svg#icon-ketel"></use></svg>
+            <svg><use href="../images/how_made_icon.svg#icon-ketel"></use></svg>
             <figcaption>
               <h3>16KG</h3>
               <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
@@ -72,7 +72,7 @@
           </figure>
           <figure>
             <svg>
-              <use href="images/how_made_icon.svg#icon-ice-cream"></use>
+              <use href="../images/how_made_icon.svg#icon-ice-cream"></use>
             </svg>
             <figcaption>
               <h3>84</h3>
@@ -85,4 +85,5 @@
     </main>
     <footer></footer>
       <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
+      <script src="../JS/modal.js"></script>
     <script src="./index.js" type="module"></script>
