--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,1 +1,45 @@
 <!DOCTYPE html>
+<section>
+  <div class="products container">
+    <p class="products__label">100% natural</p>
+    <h2 class="products__title">Products</h2>
+    <ul class="products__grid">
+      <li class="products__list products__list--color-green">
+        <h3 class="products__title-card">ice cream</h3>
+        <p class="products__text">
+          Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer
+        </p>
+        <button class="products__btn-service" type="button" data-modal-open>
+          <svg class="" width="40" height="25">
+            <use href="./images/icons.svg#icon-arrow"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="products__list products__list--color-yellow">
+        <h3 class="products__title-card">ice coffee</h3>
+        <p class="products__text">
+          Fragrant invigorating drink created from 100% natural ingredients without the use of
+          preservatives and flavor enhancers
+        </p>
+        <button class="products__btn-service" type="button" data-modal-open>
+          <svg class="" width="40" height="25">
+            <use href="./images/icons.svg#icon-arrow"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="products__list products__list--color-orange">
+        <h3 class="products__title-card">milkshakes</h3>
+
+        <p class="products__text">
+          Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
+          other sweets of your choice
+        </p>
+        <button class="products__btn-service" type="button" data-modal-open>
+          <svg class="" width="40" height="25">
+            <use href="./images/icons.svg#icon-arrow"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </div>
+</section>
