update  - fonts add , font-size  add

--- a/src/sass/vars/_globals.scss
+++ b/src/sass/vars/_globals.scss
@@ -4,8 +4,15 @@
     $L-text-size: 18px;
     $XL-text-size: 20px;
     $XXL-text-size: 30px;
-    $font-weight-XL: 700;
-    $font-wieght-L: 400;
+
+    $font-wieght-XS: 400;
+    $font-wieght-S: 500;
+    $font-wieght-M: 600;
+    $font-weight-L: 700;
+    $font-wieght-XL: 800;
+    $font-wieght-XXL: 900;
+
+
     $font-standard: "Montserrat", sans-serif;
     $font-special: "Seymour One", sans-serif;
 
