git commit "feat: still working on footer"

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,36 @@
-<!DOCTYPE html>
+<footer>
+  <div class="container footer">
+    <div class="footer__block--title">
+      <p class="footer__title">
+        homemade ice cream made<span class="footer__span">with passion</span>
+      </p>
+    </div>
+    <ul class="footer__media">
+      <li>
+        <a href="#" class="">
+          <svg class="footer__icon" width="20px" height="20px">
+            <use href="../images/project-symbol-defs (1).svg#icon-github-project"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="">
+          <svg class="footer__icon" width="20.4px" height="15.87px">
+            <use href="../images/project-symbol-defs (1).svg#icon-telegram"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a href="#" class="">
+          <svg class="footer__icon" width="9.35px" height="20.4px">
+            <use href="../images/project-symbol-defs (1).svg#icon-facebook-project"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div></div>
+  <div>
+    <p class=""></p>
+  </div>
+</footer>
