--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,21 +9,21 @@
       <li>
         <a href="#" class="">
           <svg class="footer__icon" width="20px" height="20px">
-            <use href="../images/project-symbol-defs (1).svg#icon-github-project"></use>
+            <use href="../images/social_media_icon.svg#icon-github-project"></use>
           </svg>
         </a>
       </li>
       <li>
         <a href="#" class="">
           <svg class="footer__icon" width="20.4px" height="15.87px">
-            <use href="../images/project-symbol-defs (1).svg#icon-telegram"></use>
+            <use href="../images/social_media_icon.svg#icon-telegram"></use>
           </svg>
         </a>
       </li>
       <li>
         <a href="#" class="">
           <svg class="footer__icon" width="9.35px" height="20.4px">
-            <use href="../images/project-symbol-defs (1).svg#icon-facebook-project"></use>
+            <use href="../images/social_media_icon.svg#icon-facebook-project"></use>
           </svg>
         </a>
       </li>
