--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -28,7 +28,7 @@
             </figcaption>
           </figure>
           <div>
-            <button type="button" [data-modal-open]>Read more ></button>
+            <button type="button" [data-modal-open]>Read more </button>
           </div>
           <!--Modal1234-->
           <div class="backdrop is-hidden" [data-modal]>
