--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,5 +6,6 @@
 // Style dla pliku z przykładem HTML fragmentu
 
 /**/
-@import "./vars/globals";
-@import "./vars/mixins";
+@import './vars/globals';
+@import './vars/mixins';
+@import './components/contacts';
