--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,89 +1,80 @@
 <!DOCTYPE html>
 <!--Krowa-->
-      <section>
-        <div class="container">
-          <article>
-            <p>TRADITION AND LOVE</p>
-            <h2>HOW IT'S MADE</h2>
-          </article>
-          <figure>
-            <img
-              src="../images/mobile/cow.jpg"
-              alt="cow on grass"
-              srcset="../images/mobile/x2/cow@2x.jpg"
-            />
-            <figcaption>
-              <p>
-                Ice is a place where you will become not only a little happier,
-                but also healthier. Health is the main value for us, and we
-                follow it when creating our handmade desserts.
-              </p>
-              <p>
-                We use traditional recipes and 100% natural ingredients. Our
-                products are so natural that they can be given to children from
-                the age of three years. Sweets lovers can expect 55 types of ice
-                cream, 15 types of coffee and 23 milkshakes.
-              </p>
-              <p>This is enough to choose ice cream and coffee for any mood!</p>
-            </figcaption>
-          </figure>
-          <div>
-            <button type="button" [data-modal-open]>Read more </button>
-          </div>
-          <!--Modal1234-->
-          <div class="backdrop is-hidden" [data-modal]>
-            <figure>
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/hO-7cz7gyAY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-              <figcaption>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et Lorem ipsum dolor
-                  sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                  incididunt ut labore et
-                </p>
-              </figcaption>
-            </figure>
-            <button class="order__btn-close" type="button" data-modal-close>
-              <b>X</b>
-            </button>
-          </div>
-          <!--Modal^^-->
-          <figure>
-            <svg><use href="../images/how_made_icon.svg"></use></svg>
-            <figcaption>
-              <h3>721</h3>
-              <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <svg><use href="../images/how_made_icon.svg#icon-ketel"></use></svg>
-            <figcaption>
-              <h3>16KG</h3>
-              <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <svg>
-              <use href="../images/how_made_icon.svg#icon-ice-cream"></use>
-            </svg>
-            <figcaption>
-              <h3>84</h3>
-              <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </figcaption>
-          </figure>
-        </div>
-      </section>
-      <!--Krowa ^^-->
-    </main>
-    <footer></footer>
-      <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
-      <script src="../JS/modal.js"></script>
-    <script src="./index.js" type="module"></script>
+<section>
+  <div class="container">
+    <article>
+      <p>TRADITION AND LOVE</p>
+      <h2>HOW IT'S MADE</h2>
+    </article>
+    <figure>
+      <img
+        src="/src/images/mobile/cow.jpg"
+        alt="cow on grass"
+        srcset="/src/images/mobile/x2/cow@2x.jpg"
+      />
+      <figcaption>
+        <p>
+          Ice is a place where you will become not only a little happier, but also healthier. Health
+          is the main value for us, and we follow it when creating our handmade desserts.
+        </p>
+        <p>
+          We use traditional recipes and 100% natural ingredients. Our products are so natural that
+          they can be given to children from the age of three years. Sweets lovers can expect 55
+          types of ice cream, 15 types of coffee and 23 milkshakes.
+        </p>
+        <p>This is enough to choose ice cream and coffee for any mood!</p>
+      </figcaption>
+    </figure>
+    <div>
+      <button type="button" [data-modal-open]>Read more</button>
+    </div>
+    <!--Modal1234-->
+    <div class="backdrop is-hidden" [data-modal]>
+      <figure>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/hO-7cz7gyAY"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <figcaption>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+        </figcaption>
+      </figure>
+      <button class="order__btn-close" type="button" data-modal-close>
+        <b>X</b>
+      </button>
+    </div>
+    <!--Modal^^-->
+    <figure>
+      <svg><use href="/src/images/how_made_icon.svg"></use></svg>
+      <figcaption>
+        <h3>721</h3>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </figcaption>
+    </figure>
+    <figure>
+      <svg><use href="/src/images/how_made_icon.svg#icon-ketel"></use></svg>
+      <figcaption>
+        <h3>16KG</h3>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </figcaption>
+    </figure>
+    <figure>
+      <svg>
+        <use href="/src/images/how_made_icon.svg#icon-ice-cream"></use>
+      </svg>
+      <figcaption>
+        <h3>84</h3>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </figcaption>
+    </figure>
+  </div>
+</section>
