--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<section class="contact">
+<section class="contact container">
   <div class="contact__container">
     <div class="contact__orginal-heading-container">
       <p class="contact__title">cafe</p>
     </div>
     <p class="contact__simply-text">Chicago</p>
     <ul class="contact__links-list">
-      <li><span>10340 Ridgeland Ave,</span></li>
-      <li><span>Chicago Ridge, IL 60415, USA</span></li>
+      <li class="contact__box"><span>10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</span></li>
     </ul>
     <p class="contact__under-line"></p>
     <ul class="contact__list-style-none">
@@ -27,7 +26,7 @@
     <p class="contact__under-line"></p>
     <ul class="contact__list-style-none">
       <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0) 383 766 284"
+        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
           >+61(0) 383 766 284</a
         >
       </li>
@@ -44,8 +43,7 @@
     </div>
     <p class="contact__simply-text">Los Angeles</p>
     <ul class="contact__links-list">
-      <li><span>1003 Manhattan Ave, Manhattan</span></li>
-      <li><span>Beach, CA 90263, USA</span></li>
+      <li class="contact__box"><span>1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</span></li>
     </ul>
     <p class="contact__under-line"></p>
     <ul class="contact__list-style-none">
@@ -65,7 +63,7 @@
     <p class="contact__under-line"></p>
     <ul class="contact__list-style-none">
       <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0) 383 766 284"
+        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
           >+61(0) 383 766 284</a
         >
       </li>
@@ -82,8 +80,7 @@
     </div>
     <p class="contact__simply-text">New York</p>
     <ul class="contact__links-list">
-      <li><span>726 Sterling Pl, Brooklyn, NY</span></li>
-      <li><span>11222, USA</span></li>
+      <li class="contact__box"><span>726 Sterling Pl, Brooklyn, NY 11222, USA</span></li>
     </ul>
     <p class="contact__under-line"></p>
     <ul class="contact__list-style-none">
@@ -103,7 +100,7 @@
     <p class="contact__under-line"></p>
     <ul class="contact__list-style-none">
       <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0) 383 766 284"
+        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
           >+61(0) 383 766 284</a
         >
       </li>
@@ -115,3 +112,11 @@
     </ul>
   </div>
 </section>
+<div class="contact-btn container">
+  <div class="contact-btn__our-location">
+    <button type="submit">Our Locations</button>
+  </div>
+  <div class="contact-btn__franchise">
+    <button type="submit">Franchise</button>
+  </div>
+</div>
