--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
         <div class="swiper" >
-            <img class="swiper__gallery" src="/images/6.reviews/lodyDesktop1x.jpg.jpg">
+            <img class="swiper__gallery" src="../images/customer-reviews/lodyDesktop1x.jpg.jpg">
 
-            <img class="swiper__image" src="images/6.reviews/Emily1x.jpg.jpg" alt="kobieta">
+            <img class="swiper__image" src="../images/customer-reviews/Emily1x.jpg.jpg" alt="kobieta">
             <p class="swiper__text">
                 I love visiting your cafe. You prepare the most delicious ice
                 cream in Los Angeles! In addition, you have beautiful serving,
