--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,54 +2,126 @@
   background-color: #84a178;
   max-width: 100%;
   height: 372px;
-
   @include tablet {
     max-width: 768px;
     height: 253px;
+  }
+  @include desktop {
+    max-width: 1168px;
+    height: 214px;
+  }
 
-    @include desktop {
-      max-width: 1168px;
-      height: 214px;
+  &__wrapper {
+    padding-inline: 20px;
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
     }
   }
+
   &__block--title {
-    display: block;
-    width: 234px;
-    height: 134px;
-    top: 1448px;
-    left: 20px;
+    width: 232px;
+    padding-top: 60px;
+
+    @include tablet {
+      padding-block: 40px 32px;
+      width: 50%;
+    }
+
+    @include desktop {
+      padding-block: 120px 60px;
+    }
   }
 
-  &__title {
-    font-family: Montserrat;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #fcfcfc;
-  }
-  &__span {
-    font-family: Montserrat;
-    font-size: 34px;
-    font-weight: 700;
-    line-height: 41px;
-    letter-spacing: 0.04em;
-    text-align: left;
-    color: #fcfcfc;
+  .social-media {
+    padding: 0;
+
+    &__block {
+      display: flex;
+      justify-content: flex-end;
+      gap: 20px;
+
+      @include tablet {
+        gap: 30px;
+      }
+    }
+    &__icon {
+      width: 34px;
+      height: 34px;
+      border-radius: 50%;
+      background-color: $button-background-color;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      fill: $primary-background-color;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__item:hover .social-media__icon,
+    &__item:focus .social-media__icon {
+      fill: $secondary-background-color;
+    }
   }
 
-  &__media {
+  .contact {
     display: flex;
-    gap: 10px;
+    justify-content: flex-end;
+    gap: 0.5em;
+    padding-top: 20px;
+
+    @include tablet {
+      padding-top: 34px;
+    }
+
+    @include desktop {
+      padding-top: 40px;
+    }
+
+    &__paragraph {
+      font-family: $montserrat-fonts;
+      @include font($fs12, $fw700, 0, 186%);
+      color: $primary-text-color;
+
+      @include tablet {
+        @include font($fs14, $fw700, 0, 186%);
+      }
+
+      @include desktop {
+        @include font($fs16, $fw700, 0.32px, 186%);
+      }
+    }
+
+    &__phone {
+      font-family: $montserrat-fonts;
+      @include font($fs12, $fw700, 0, 186%);
+      color: $secondary-background-color;
+
+      @include tablet {
+        @include font($fs14, $fw700, 0, 186%);
+      }
+    }
   }
 
-  &__icon {
-    display: flex;
-    background-color: #f8d24e;
-    fill: #84a178;
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
+  .copyrights {
+    padding-block: 20px;
+    text-align: center;
+    border-top: 1px solid $horizontal-line-color;
+
+    @include tablet {
+      padding-block: 12px;
+    }
+  }
+  &__paragraph {
+    color: $all-rights-text-color;
+    font-family: $montserrat-fonts;
+    @include font($fs14, $fw700, 0, 152%);
+
+    @include tablet {
+      @include font($fs14, $fw700, 0.28px, 186%);
+    }
+
+    @include desktop {
+      @include font($fs12, $fw700, 0.24px, 186%);
+    }
   }
 }
