--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,9 +2,9 @@
 <!--Krowa-->
 <section class="about">
   <div class="container">
-    <article class="about__title">
-      <p>TRADITION AND LOVE</p>
-      <h2>HOW IT'S MADE</h2>
+    <article class="about__title-box">
+      <p class="about__label">TRADITION AND LOVE</p>
+      <h2 class="about__title">HOW IT'S MADE</h2>
     </article>
     <figure class="cow">
       <img
