--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,3 +9,5 @@
 @import './vars/globals';
 @import './vars/mixins';
 @import './components/contacts';
+@import './components/modal';
+@import './components/forms';
