--- a/src/sass/vars/_globals.scss
+++ b/src/sass/vars/_globals.scss
@@ -40,6 +40,7 @@ $background-grey: #D9D9D9;
     list-style-type: none;
 }
 
+
 h1,h2,h3,h4,p
 {
     margin: 0;
@@ -64,4 +65,29 @@ button
 a
 {
     text-decoration: none;
+}
+
+////Modal/////
+
+.backdrop {
+position: fixed;
+left: 0;
+top: 0;
+background-color: rgba(0, 0, 0, 0.2);
+width: 100%;
+height: 100%;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+opacity: 1;
+transform: scale;
+visibility: visible;
+
+}
+.modal {
+position: absolute;
+}
+
+.is-hidden {
+pointer-events: none;
+visibility: hidden;
+opacity: 0;
 }
