git pull origin main

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="footer__wrapper">
       <div class="footer__block--title">
         <p class="footer__title">homemade ice cream made</p>
-        <p class="footer__title">with passion</p>
+        <p class="footer__title--accent">with passion</p>
       </div>
       <div class="social-media">
         <ul class="social-media__block">
