--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,15 +1,5 @@
 .footer {
-  background-color: #84a178;
-  max-width: 100%;
-  height: 372px;
-  @include tablet {
-    max-width: 768px;
-    height: 253px;
-  }
-  @include desktop {
-    max-width: 1168px;
-    height: 214px;
-  }
+  background-color: $olive-green;
 
   &__wrapper {
     padding-inline: 20px;
@@ -33,8 +23,52 @@
     }
   }
 
+  &__title {
+    font-family: $font-standard;
+    @include font($L-text-size, $font-weight-XL);
+    line-height: 1.2;
+    color: $title-white;
+
+    @include tablet {
+      @include font($footer-text-size, $font-weight-XL);
+      line-height: 1.2;
+    }
+
+    @include desktop {
+      @include font($XXL-text-size, $font-wieght-L);
+      line-height: 1.2;
+    }
+    &--accent {
+      font-family: $font-standard;
+      @include font($footer-accent-size, $font-weight-XL);
+      line-height: 1.2;
+      color: $title-white;
+      margin-top: 16px;
+
+      @include tablet {
+        @include font($footer-accent-xlsize, $font-weight-XL);
+        line-height: 1.2;
+        margin-top: 8px;
+      }
+
+      @include desktop {
+        @include font($footer-accent-xxlsize, $font-weight-XL);
+        line-height: 1.2;
+        margin-top: 14px;
+      }
+    }
+  }
+
   .social-media {
-    padding: 0;
+    padding-block: 60px 40px;
+
+    @include tablet {
+      padding-block: 100px 60px;
+    }
+
+    @include desktop {
+      padding-block: 138px 60px;
+    }
 
     &__block {
       display: flex;
@@ -49,17 +83,17 @@
       width: 34px;
       height: 34px;
       border-radius: 50%;
-      background-color: $button-background-color;
+      background-color: $button-yellow;
       display: flex;
       justify-content: center;
       align-items: center;
-      fill: $primary-background-color;
+      fill: $olive-green;
       transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     &__item:hover .social-media__icon,
     &__item:focus .social-media__icon {
-      fill: $secondary-background-color;
+      fill: $title-white;
     }
   }
 
@@ -78,26 +112,37 @@
     }
 
     &__paragraph {
-      font-family: $montserrat-fonts;
-      @include font($fs12, $fw700, 0, 186%);
-      color: $primary-text-color;
+      font-family: $font-standard;
+      @include font($S-text-size, $font-weight-XL);
+      line-height: 1.9;
+      color: $footer-black;
 
       @include tablet {
-        @include font($fs14, $fw700, 0, 186%);
+        @include font($M-text-size, $font-weight-XL);
+        line-height: 1.9;
       }
 
       @include desktop {
-        @include font($fs16, $fw700, 0.32px, 186%);
+        @include font($M-footer-size, $font-weight-XL);
+        line-height: 1.9;
       }
     }
 
     &__phone {
-      font-family: $montserrat-fonts;
-      @include font($fs12, $fw700, 0, 186%);
-      color: $secondary-background-color;
+      font-family: $font-footer;
+      @include font($S-text-size, $font-weight-footer);
+      line-height: 1.9;
+
+      color: $title-white;
 
       @include tablet {
-        @include font($fs14, $fw700, 0, 186%);
+        @include font($M-text-size, $font-weight-footer);
+        line-height: 1.9;
+
+        @include desktop {
+          @include font($M-footer-size, $font-weight-footer);
+          line-height: 1.9;
+        }
       }
     }
   }
