--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -10,7 +10,14 @@
       <img
         src="/src/images/mobile/cow.jpg"
         alt="cow on grass"
-        srcset="/src/images/mobile/cow.jpg 480w, /src/images/mobile/x2/cow@2x.jpg 480w, /src/images/tablet/cow.jpg 768w, /src/images/tablet/x2/cow@2x.jpg 768w, /src/images/desktop/cow.jpg 1200w, /src/images/desktop/x2/cow@x2.jpg 1200w"
+        srcset="
+          /src/images/mobile/cow.jpg         480w,
+          /src/images/mobile/x2/cow@2x.jpg   960w,
+          /src/images/tablet/cow.jpg         768w,
+          /src/images/tablet/x2/cow@2x.jpg  1536w,
+          /src/images/desktop/cow.jpg       1200w,
+          /src/images/desktop/x2/cow@x2.jpg 2400w
+        "
         sizes="(min-width:480px) 480px,(min-width:768px) 768px,(min-width:1200px) 1200px"
       />
       <figcaption class="cow__box-text">
@@ -25,62 +32,69 @@
         </p>
         <p class="cow__text">This is enough to choose ice cream and coffee for any mood!</p>
       </figcaption>
-      </figure>
-      <div class="about__button">
+    </figure>
+    <div class="about__button">
       <button class="about__button-body" type="button" data-modal-open>Read more</button>
-      </div>
     </div>
-    <!--Modal1234-->
-    <div class="backdrop is-hidden" data-modal>
-      <figure class="modal-video">
-        <iframe
-          src="https://www.youtube.com/embed/hO-7cz7gyAY"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-          class="backdrop__video"
-        ></iframe>
-        <figcaption class="modal-video__text-box">
-          <p class="modal-video__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-        </figcaption>
-      </figure>
-      <button class="order__btn-close" type="button" data-modal-close>
-        <b>X</b>
-      </button>
-    </div>
-    <!--Modal^^-->
-  </section>
-    <section class="advantages">
-    <figure class=advantages__icon-box>
-      <svg class="advantages__icon">
-        <use href="/src/images/how_made_icon.svg#icon-cow-head"></use></svg>
-      <figcaption class="advantages__icon-text-box">
-        <h3 class="advantages__icon-title">721</h3>
-        <p class="advantages__icon-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </figcaption>
-    </figure>
-    <figure class="advantages__icon-box">
-      <svg class="advantages__icon">
-        <use href="/src/images/how_made_icon.svg#icon-ketel"></use></svg>
-      <figcaption class="advantages__icon-text-box">
-        <h3 class="advantages__icon-title">16KG</h3>
-        <p class="advantages__icon-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </figcaption>
-    </figure>
-    <figure class="advantages__icon-box">
-      <svg class="advantages__icon">
-        <use href="/src/images/how_made_icon.svg#icon-ice-cream"></use>
-      </svg>
-      <figcaption class="advantages__icon-text-box">
-        <h3 class="advantages__icon-title">84</h3>
-        <p class="advantages__icon-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </figcaption>
-    </figure>
   </div>
+  <!--Modal1234-->
+  <div class="backdrop is-hidden" data-modal>
+    <figure class="modal-video">
+      <iframe
+        src="https://www.youtube.com/embed/hO-7cz7gyAY"
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+        class="backdrop__video"
+      ></iframe>
+      <figcaption class="modal-video__text-box">
+        <p class="modal-video__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et
+        </p>
+      </figcaption>
+    </figure>
+    <button class="order__btn-close" type="button" data-modal-close>
+      <b>X</b>
+    </button>
+  </div>
+  <!--Modal^^-->
+</section>
+<section class="advantages">
+  <h6 class="crawler">advantages</h6>
+  <figure class="advantages__icon-box">
+    <svg class="advantages__icon">
+      <use href="/src/images/how_made_icon.svg#icon-cow-head"></use>
+    </svg>
+    <figcaption class="advantages__icon-text-box">
+      <h3 class="advantages__icon-title">721</h3>
+      <p class="advantages__icon-text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </figcaption>
+  </figure>
+  <figure class="advantages__icon-box">
+    <svg class="advantages__icon">
+      <use href="/src/images/how_made_icon.svg#icon-ketel"></use>
+    </svg>
+    <figcaption class="advantages__icon-text-box">
+      <h3 class="advantages__icon-title">16KG</h3>
+      <p class="advantages__icon-text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </figcaption>
+  </figure>
+  <figure class="advantages__icon-box">
+    <svg class="advantages__icon">
+      <use href="/src/images/how_made_icon.svg#icon-ice-cream"></use>
+    </svg>
+    <figcaption class="advantages__icon-text-box">
+      <h3 class="advantages__icon-title">84</h3>
+      <p class="advantages__icon-text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </figcaption>
+  </figure>
 </section>
 <!--Krowa ^^-->
