git pull origin main

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,4 +6,7 @@
 // Style dla pliku z przykładem HTML fragmentu
 
 /**/
+
+@import './vars/globals';
+@import './vars/mixin.scss';
 @import './components/footer';
