--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -25,14 +25,14 @@
         <div class="modal">
           <button class="modal_btn-svg" type="modal-button"  data-modal-close>
             <svg  width="13" height="13">
-                <use href="./../images/icons.svg#icon-close-x"></use>
+                <use href="./images/icons.svg#icon-close-x"></use>
             </svg>
           </button>
           <form >
             <div class="forms">
               <legend class="forms_title">Chocolate icecream</legend>
               <div class="forms_img">
-                <img src="./../images/icecream.png" srcset="./../images/icecream@2x.png 2x" alt="Lody czekoladowe" 
+                <img src="./images/icecream.png" srcset="./images/icecream@2x.png 2x" alt="Lody czekoladowe" 
                 >
               </div>
               <div >
@@ -100,6 +100,6 @@
           </form>
         </div>
       </div>
-      <script src="./../js/modal.js"></script>
+      <script src="./JS/modal.js"></script>
   </body>
 </html>
