--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -180,3 +180,27 @@ a {
 .crawler {
   display: none;
 }/*# sourceMappingURL=main.css.map */
+
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
+  transform: scale;
+  visibility: visible;
+  
+  }
+  .modal {
+  position: absolute;
+  }
+  
+  .is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  }
