--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,122 +1,127 @@
 <!DOCTYPE html>
-<section class="contact container">
-  <div class="contact__container">
-    <div class="contact__orginal-heading-container">
-      <p class="contact__title">cafe</p>
+<section class="contact-main">
+  <h2 class="contact-main__title">Contacts</h2>
+  <section class="contact container">
+    <div class="contact__container">
+      <div class="contact__orginal-heading-container">
+        <p class="contact__title">cafe</p>
+      </div>
+      <p class="contact__simply-text">Chicago</p>
+      <ul class="contact__links-list">
+        <li class="contact__box"><span>10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</span></li>
+      </ul>
+      <p class="contact__under-line"></p>
+      <ul class="contact__list-style-none">
+        <li><p class="contact__simply-text">Monday - Friday</p></li>
+        <li>
+          <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin">
+            06:00 AM - 10:00 PM
+          </p>
+        </li>
+        <li><p class="contact__simply-text">Saturday - Sunday</p></li>
+        <li>
+          <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin24">
+            08:00 AM - 16:00 PM
+          </p>
+        </li>
+      </ul>
+      <p class="contact__under-line"></p>
+      <ul class="contact__list-style-none">
+        <li>
+          <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
+            >+61(0) 383 766 284</a
+          >
+        </li>
+        <li>
+          <a class="contact__tel-and-mail contact__simply-text" href="mail:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </li>
+      </ul>
     </div>
-    <p class="contact__simply-text">Chicago</p>
-    <ul class="contact__links-list">
-      <li class="contact__box"><span>10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</span></li>
-    </ul>
-    <p class="contact__under-line"></p>
-    <ul class="contact__list-style-none">
-      <li><p class="contact__simply-text">Monday - Friday</p></li>
-      <li>
-        <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin">
-          06:00 AM - 10:00 PM
-        </p>
-      </li>
-      <li><p class="contact__simply-text">Saturday - Sunday</p></li>
-      <li>
-        <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin24">
-          08:00 AM - 16:00 PM
-        </p>
-      </li>
-    </ul>
-    <p class="contact__under-line"></p>
-    <ul class="contact__list-style-none">
-      <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
-          >+61(0) 383 766 284</a
-        >
-      </li>
-      <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="mail:noreply@envato.com"
-          >noreply@envato.com</a
-        >
-      </li>
-    </ul>
-  </div>
-  <div class="contact__container">
-    <div class="contact__orginal-heading-container">
-      <p class="contact__title">FOODTRUCK</p>
+    <div class="contact__container">
+      <div class="contact__orginal-heading-container">
+        <p class="contact__title">FOODTRUCK</p>
+      </div>
+      <p class="contact__simply-text">Los Angeles</p>
+      <ul class="contact__links-list">
+        <li class="contact__box">
+          <span>1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</span>
+        </li>
+      </ul>
+      <p class="contact__under-line"></p>
+      <ul class="contact__list-style-none">
+        <li><p class="contact__simply-text">Monday - Friday</p></li>
+        <li>
+          <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin">
+            06:00 AM - 10:00 PM
+          </p>
+        </li>
+        <li><p class="contact__simply-text">Saturday - Sunday</p></li>
+        <li>
+          <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin24">
+            08:00 AM - 16:00 PM
+          </p>
+        </li>
+      </ul>
+      <p class="contact__under-line"></p>
+      <ul class="contact__list-style-none">
+        <li>
+          <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
+            >+61(0) 383 766 284</a
+          >
+        </li>
+        <li>
+          <a class="contact__tel-and-mail contact__simply-text" href="mail:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </li>
+      </ul>
     </div>
-    <p class="contact__simply-text">Los Angeles</p>
-    <ul class="contact__links-list">
-      <li class="contact__box"><span>1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</span></li>
-    </ul>
-    <p class="contact__under-line"></p>
-    <ul class="contact__list-style-none">
-      <li><p class="contact__simply-text">Monday - Friday</p></li>
-      <li>
-        <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin">
-          06:00 AM - 10:00 PM
-        </p>
-      </li>
-      <li><p class="contact__simply-text">Saturday - Sunday</p></li>
-      <li>
-        <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin24">
-          08:00 AM - 16:00 PM
-        </p>
-      </li>
-    </ul>
-    <p class="contact__under-line"></p>
-    <ul class="contact__list-style-none">
-      <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
-          >+61(0) 383 766 284</a
-        >
-      </li>
-      <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="mail:noreply@envato.com"
-          >noreply@envato.com</a
-        >
-      </li>
-    </ul>
-  </div>
-  <div class="contact__container">
-    <div class="contact__orginal-heading-container">
-      <p class="contact__title">cafe</p>
+    <div class="contact__container">
+      <div class="contact__orginal-heading-container">
+        <p class="contact__title">cafe</p>
+      </div>
+      <p class="contact__simply-text">New York</p>
+      <ul class="contact__links-list">
+        <li class="contact__box"><span>726 Sterling Pl, Brooklyn, NY 11222, USA</span></li>
+      </ul>
+      <p class="contact__under-line"></p>
+      <ul class="contact__list-style-none">
+        <li><p class="contact__simply-text">Monday - Friday</p></li>
+        <li>
+          <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin">
+            06:00 AM - 10:00 PM
+          </p>
+        </li>
+        <li><p class="contact__simply-text">Saturday - Sunday</p></li>
+        <li>
+          <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin24">
+            08:00 AM - 16:00 PM
+          </p>
+        </li>
+      </ul>
+      <p class="contact__under-line"></p>
+      <ul class="contact__list-style-none">
+        <li>
+          <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
+            >+61(0) 383 766 284</a
+          >
+        </li>
+        <li>
+          <a class="contact__tel-and-mail contact__simply-text" href="mail:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </li>
+      </ul>
     </div>
-    <p class="contact__simply-text">New York</p>
-    <ul class="contact__links-list">
-      <li class="contact__box"><span>726 Sterling Pl, Brooklyn, NY 11222, USA</span></li>
-    </ul>
-    <p class="contact__under-line"></p>
-    <ul class="contact__list-style-none">
-      <li><p class="contact__simply-text">Monday - Friday</p></li>
-      <li>
-        <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin">
-          06:00 AM - 10:00 PM
-        </p>
-      </li>
-      <li><p class="contact__simply-text">Saturday - Sunday</p></li>
-      <li>
-        <p class="contact__simply-text --contact__simply-text --contact__simply-text-margin24">
-          08:00 AM - 16:00 PM
-        </p>
-      </li>
-    </ul>
-    <p class="contact__under-line"></p>
-    <ul class="contact__list-style-none">
-      <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="tel:+61(0)383766284"
-          >+61(0) 383 766 284</a
-        >
-      </li>
-      <li>
-        <a class="contact__tel-and-mail contact__simply-text" href="mail:noreply@envato.com"
-          >noreply@envato.com</a
-        >
-      </li>
-    </ul>
+  </section>
+  <div class="contact-btn container">
+    <div class="contact-btn__our-location">
+      <button type="submit">Our Locations</button>
+    </div>
+    <div class="contact-btn__franchise">
+      <button type="submit">Franchise</button>
+    </div>
   </div>
 </section>
-<div class="contact-btn container">
-  <div class="contact-btn__our-location">
-    <button type="submit">Our Locations</button>
-  </div>
-  <div class="contact-btn__franchise">
-    <button type="submit">Franchise</button>
-  </div>
-</div>
