--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-
+ <!--Okno modalne + button Read more-->
   <body>
     <main>
         <section class="section">
             <div class="container">
                 <div>
-                    <button class="button" type="button" data-modal-open>Read more</button>
+                    <button class="button" type="button" data-modal-open>About</button>
                 </div>
             </div>
         </section>
