--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
- <!--Okno modalne + button Read more-->
+ <!--Okno modalne + button About-->
   <body>
     <main>
-        <section class="section">
-            <div class="container">
-                <div>
-                    <button class="button" type="button" data-modal-open>About</button>
-                </div>
-            </div>
-        </section>
+       
+      <div>
+        <button class="button" type="button" data-modal-open>About</button>
+      </div>
+         
     </main>
 
     <div class="backdrop is-hidden" data-modal>
