--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -4,7 +4,7 @@
     <main>
        
       <div>
-        <button class="button" type="button" data-modal-open>About</button>
+        <button type="button" data-modal-open>About</button>
       </div>
          
     </main>
