--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,3 +11,5 @@
 @import './components/contacts';
 @import './components/about';
 @import './components/advantages';
+@import './components/modal';
+@import './components/forms'
