francise and location buttons add
as

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -116,12 +116,20 @@
       </ul>
     </div>
   </section>
-  <div class="contact-btn container">
-    <div class="contact-btn__our-location">
-      <button type="submit">Our Locations</button>
-    </div>
-    <div class="contact-btn__franchise">
-      <button type="submit">Franchise</button>
-    </div>
-  </div>
+  <ul class="contact__btn-list">
+    <li class="contact__btn">
+      <button class="contact__btn-btn" type="button">
+        Our locatrion<svg class="contact__btn-icon" width="12" height="12">
+          <use href="/src/images/how_made_icon.svg#icon_arrow"></use>
+        </svg>
+      </button>
+    </li>
+    <li class="contact__btn">
+      <button class="contact__btn-btn contact__btn-btn--franchise" type="button">
+        Franchise<svg class="contact__btn-icon" width="12" height="12">
+          <use href="/src/images/how_made_icon.svg#icon_arrow"></use>
+        </svg>
+      </button>
+    </li>
+  </ul>
 </section>
