--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -88,6 +88,6 @@
           </form>
         </div>
       </div>
-      <script src="./JS/modal.js"></script>
+      <script src="./js/modal.js"></script>
   </body>
 </html>
