new html, css, img
zmiana html razem z css. wstawione img do struktury plików, renderowane przez squoosh.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,3 +11,4 @@
 @import './components/contacts';
 @import './components/about';
 @import './components/advantages';
+@import './components/products';
