--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,29 +5,72 @@
     <h2 class="products__title">Products</h2>
     <ul class="products__grid">
       <li class="products__list products__list--color-green">
+        <img
+          class="products__img"
+          src="/src/images/desktop/ice-cream.png"
+          alt="cup of ice cream"
+          srcset="
+            /src/images/desktop/ice-cream302.png       302w,
+            /src/images/desktop/x2/ice-cream302@2x.png 604w,
+            /src/images/mobile/ice-crem200.png         200w,
+            /src/images/mobile/x2/ice-cream200@2x.png  400w
+          "
+          sizes="(max-width: 1200px) 200px, 302px"
+        />
+        />
+
         <h3 class="products__title-card">ice cream</h3>
+
         <p class="products__text">
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer
         </p>
         <button class="products__btn-service" type="button" data-modal-open>
           <svg class="" width="40" height="25">
-            <use href="./images/icons.svg#icon-arrow"></use>
+            <use href="/src/images/icons.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
       <li class="products__list products__list--color-yellow">
+        <img
+          class="products__img"
+          src="/src/images/desktop/ice-coffe.png"
+          alt="cup of ice coffee"
+          srcset="
+            /src/images/desktop/ice-coffe302.png       302w,
+            /src/images/desktop/x2/ice-coffe302@2x.png 604w,
+            /src/images/mobile/ice-coffe200.png        200w,
+            /src/images/mobile/x2/ice-coffe200@2x.png  400w
+          "
+          sizes="(max-width: 1200px) 200px, 302px"
+        />
+
         <h3 class="products__title-card">ice coffee</h3>
+
         <p class="products__text">
           Fragrant invigorating drink created from 100% natural ingredients without the use of
           preservatives and flavor enhancers
         </p>
         <button class="products__btn-service" type="button" data-modal-open>
           <svg class="" width="40" height="25">
-            <use href="./images/icons.svg#icon-arrow"></use>
+            <use href="/src/images/icons.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
       <li class="products__list products__list--color-orange">
+        <img
+          class="products__img"
+          src="/src/images/desktop/milkshakes.png"
+          alt="cup of milkshakes"
+          srcset="
+            /src/images/desktop/milkshakes302.png       302w,
+            /src/images/desktop/x2/milkshakes302@2x.png 604w,
+            /src/images/mobile/milkshakes200.png        200w,
+            /src/images/mobile/x2/milkshakes200@2x.png  400w
+          "
+          sizes="(max-width: 1200px) 200px, 302px"
+        />
+        />
+
         <h3 class="products__title-card">milkshakes</h3>
 
         <p class="products__text">
@@ -36,7 +79,7 @@
         </p>
         <button class="products__btn-service" type="button" data-modal-open>
           <svg class="" width="40" height="25">
-            <use href="./images/icons.svg#icon-arrow"></use>
+            <use href="/src/images/icons.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
