feature hero/header
addes images

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,15 +5,15 @@
           <a class="header__logo logo" href="./index.html">
               <picture>
                   <source srcset="
-                    ./images/desktop/LogoDesktop.png   1x,
-                    ./images/desktop/LogoDesktop@2x.png 2x" media="(min-width: 1200px)" width="60" />
+                  /src/images/desktop/LogoDesktop.png   1x,
+                  /src/images/desktop/LogoDesktop@2x.png 2x" media="(min-width: 1200px)" width="60" />
                   <source srcset="
-                    ./images/tablet/LogoTablet.png    1x,
-                    ./images/tablet/LogoTablet@2x.png 2x" media="(min-width: 768px)" width="48" />
+                  /src/images/tablet/LogoTablet.png    1x,
+                  /src/images/tablet/LogoTablet@2x.png 2x" media="(min-width: 768px)" width="48" />
                   <source srcset="
-                    ./images/mobile/LogoMobile.png    1x,
-                    ./images/mobile/LogoMobile@2x.png 2x" media="(min-width: 320px)" width="40" />
-                  <img class="logo__img" src="/images/desktop/LogoDesktop.png" alt="logo ice-cream" />
+                  /src/images/mobile/LogoMobile.png    1x,
+                  /src/images/mobile/LogoMobile@2x.png 2x" media="(min-width: 320px)" width="40" />
+                  <img class="logo__img" src="/src/images/mobile/LogoMobile.png" alt="logo ice-cream" />
               </picture>
           </a>
           <ul class="nav__list">
