--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,14 +31,14 @@
         <div class="hero__wrap-plate">
             <picture>
                 <source srcset="
-              ./images/desktop/plateDesktop.png    1x,
-              ./images/desktop/plateDesktop@2x.png 2x
+              /src/images/desktop/plateDesktop.png    1x,
+              /src/images/desktop/plateDesktop@2x.png 2x
             " media="(min-width: 1200px)" width="225" />
                 <source srcset="
-              ./images/tablet/plateTablet.png    1x,
-              ./images/tablet/plateTablet@2x.png 2x
+                /src//images/tablet/plateTablet.png    1x,
+                /src//images/tablet/plateTablet@2x.png 2x
             " media="(min-width: 768px)" width="152" />
-                <img class="hero__plate-img" src="/images/desktop/plateDesktop.png" title="ice-cream" alt="ice-cream" />
+                <img class="hero__plate-img" src="/src/images/desktop/plateDesktop.png" title="ice-cream" alt="ice-cream" />
             </picture>
             <div class="hero__ad">
                 <p class="hero__after-title">
@@ -47,7 +47,7 @@
                 </p>
                 <button class="hero__link-btn" type="button">
                     <svg class="hero__icon" width="8" height="8">
-                        <use href="./images/icons/icons.svg#icon-white-arrow"></use>
+                        <use href="/src/icons.svg"></use>
                     </svg>
                 </button>
             </div>
@@ -56,22 +56,22 @@
         <div class="hero__image">
             <picture>
                 <source srcset="
-              ./images/desktop/iceCreamDesktop.png    1x,
-              ./images/desktop/iceCreamDesktop@2x.png 2x
+                /src/images/desktop/iceCreamDesktop.png    1x,
+                /src/images/desktop/iceCreamDesktop@2x.png 2x
             " media="(min-width: 1200px)" width="484" />
                 <source srcset="
-              ./images/tablet/iceCreamTablet.png    1x,
-              ./images/tablet/iceCreamTablet@2x.png 2x
+                /src/images/tablet/iceCreamTablet.png    1x,
+                /src/images/tablet/iceCreamTablet@2x.png 2x
             " media="(min-width: 768px)" width="270" />
                 <source srcset="
-              ./images/mobile/iceCreamMobile.png    1x,
-              ./images/mobile/iceCreamMobile@2x.png 2x
+                /src/images/mobile/iceCreamMobile.png    1x,
+                /src/images/mobile/iceCreamMobile@2x.png 2x
             " media="(min-width: 480px)" width="270" />
                 <source srcset="
-                ./images/mobile/iceCreamMobile.png    1x,
-                ./images/mobile/iceCreamMobile@2x.png 2x
+                /src/images/mobile/iceCreamMobile.png    1x,
+                /src/images/mobile/iceCreamMobile@2x.png 2x
             " media="(max-width: 479px)" width="247" />
-                <img src="./images/desktop/iceCreamDesktop.png" alt="ice-cream" />
+                <img src="/src/images/desktop/iceCreamDesktop.png" alt="ice-cream" />
             </picture>
         </div>
     </div>
