--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,8 @@
 @import './vars/globals';
 @import './vars/mixins';
 @import './components/contacts';
+@import './components/products';
 @import './components/about';
 @import './components/advantages';
 @import './components/modal';
-@import './components/forms'
+@import './components/forms';
