--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,8 @@
 /**/
 @import './vars/globals';
 @import './vars/mixins';
+@import './components/modal';
+@import './components/forms';
 @import './components/contacts';
 @import './components/about';
 @import './components/advantages';
